# opennav_amd_demonstrations

./: README.md  cpr_rawfiles.tar.xz  deps.repos
.github/: test.yml
.github/workflows/: lint.yml  test.yml
docs/: Other guides.md  bootstrapping_robot_computer.md  disable_clearpath_services.md  honeybee_network_setup.md  map_spaces.md  multi_computer_time_synchonization.md  offline_command_and_control.md  setup_robot_automatic_bringup.md  visualizing_data_remotely.md  visualizing_data_remotely_offline.md  visualizing_data_remotely_online.md
honeybee_bringup/: CMakeLists.txt  README.md  package.xml
honeybee_bringup/config/: imu_filter.yaml  microstrain.yaml  ouster.yaml  realsense.yaml  robot.yaml  robot_localization.yaml  ros_control.yaml  teleop_joy.yaml  twist_mux.yaml
honeybee_bringup/config/include/: disable_clearpath_services.md  original_topics.txt  robot.yaml
honeybee_bringup/launch/: base.launch.py  robot.launch.py  sensors.launch.py  simulation.launch.py
honeybee_bringup/launch/include/: microstrain.launch.py  orbecc.launch.py  ouster.launch.py  realsense.launch.py
honeybee_bringup/rviz/: config.rviz
honeybee_bringup/scripts/: install
honeybee_bringup/systemd/: nav2_bringup.service  robot_bringup.service  start_daemon.md
honeybee_demos/: README.md  package.xml  setup.cfg  setup.py
honeybee_demos/honeybee_demos/: gps_patrol_demo.py  gps_waypoint_demo.py  indoor_long_duration_picking_demo.py  pick_dispatcher.py  simple_route_planner.py  urban_navigation_demo.py
honeybee_demos/launch/: gps_patrol_demo.launch.py  gps_waypoint_demo.launch.py  indoor_long_duration_demo.py  indoor_long_duration_picking_demo.launch.py  urban_navigation.launch.py
honeybee_description/: CMakeLists.txt  README.md  package.xml
honeybee_description/launch/: description.launch.py
honeybee_description/meshes/: realsense_fixed_mount.STL
honeybee_description/rviz/: config.rviz
honeybee_description/urdf/: honeybee_description.urdf.xacro
honeybee_description/urdf/includes/: OS0-32.urdf.xacro  OS1-64.urdf.xacro  colours.urdf.xacro  custom_macros.urdf.xacro  intel_realsense.urdf.xacro  j100.urdf.xacro  microstrain_imu.urdf.xacro  mount_plate.urdf.xacro
honeybee_gazebo/: CMakeLists.txt  README.md  package.xml
honeybee_gazebo/config/: gazebo_bridge.yaml
honeybee_gazebo/configs/: gazebo_bridge.yaml
honeybee_gazebo/launch/: simulation.launch.py
honeybee_gazebo/worlds/: depot.sdf
honeybee_nav2/: CMakeLists.txt  README.md  package.xml
honeybee_nav2/behavior_trees/: honeybee_bt.xml  honeybee_gps_bt.xml  honeybee_indoor_bt.xml  honeybee_urban_bt.xml
honeybee_nav2/config/: 3d_localization.yaml  cartographer_localization.lua  cartographer_slam.lua  gps_localization.yaml  nav2_gps_params.yaml  nav2_indoor_params.yaml  nav2_params.yaml  nav2_urban_params.yaml  slam_toolbox.yaml
honeybee_nav2/launch/: bringup.launch.py  localization.launch.py  nav2.launch.py  rviz.launch.py  slam_toolbox.launch.py
honeybee_nav2/launch/include/: 3d_localization.launch.py  amcl.launch.py  cartographer_3d.launch.py  gps_localization.launch.py  ground_segmentation.launch.py  navigation.launch.py  slam_3d.launch.py  slam_toolbox.launch.py
honeybee_watchdogs/: package.xml  setup.cfg  setup.py
honeybee_watchdogs/honeybee_watchdogs/: capture_system_metrics.py  joystick_estop.py  ouster_activation_watchdog.py  power_off_backpack.py  record_rosbag_data.py
j100_0849/platform/config/: control.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml
j100_0849/platform/launch/: platform-service.launch.py
j100_0849/sensors/config/: camera_0.yaml
j100_0849/sensors/launch/: camera_0.launch.py  imu_1.launch.py  sensors-service.launch.py
scripts/: copy_data_from  delete_data_from  delete_data_from_robot.sh  delete_stale_data  save_map  sync_dev_changes  sync_time  tmux_demo
simulation/: camera_0.launch.py  imu_1.launch.py  platform-service.launch.py  robot.urdf.xacro  robot.yaml  sensors-service.launch.py
simulation/platform/config/: control.yaml  imu_filter.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
simulation/platform/launch/: platform-service.launch.py
