<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>honeybee_bringup</name>
  <version>0.0.1</version>
  <description>honeybee_bringup Package</description>
  <maintainer email="steve@opennav.org">Steve Macenski</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>clearpath_config</exec_depend>
  <exec_depend>honeybee_description</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ros2_ouster</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
