<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>honeybee_demos</name>
  <version>1.0.0</version>
  <description>A series of demos using the Honeybee platform</description>
  <maintainer email="steve@opennav.org">Steve Macenski</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>honeybee_watchdogs</exec_depend>
  <exec_depend>honeybee_bringup</exec_depend>
  <exec_depend>honeybee_nav2</exec_depend>
  <exec_depend>opennav_docking</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
