<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>honeybee_description</name>
  <version>0.0.1</version>
  <description>honeybee_description package</description>
  <maintainer email="steve@opennav.org">Steve Macenski</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>clearpath_control</exec_depend>
  <exec_depend>clearpath_platform_description</exec_depend>
  <exec_depend>clearpath_sensors_description</exec_depend>
  <exec_depend>clearpath_config</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
